--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,7 +11,7 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
     _instanceof:
-        App\SharedContext\Infrastructure\Http\Server\ControllerInterface:
+        App\SharedContext\SharedModule\Infrastructure\Http\Server\ControllerInterface:
             public: true
             tags: ['controller.service_arguments']
     # makes classes in src/ available to be used as services
